--- a/index.ipynb
+++ b/index.ipynb
@@ -52,9 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -62,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,20 +80,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import Driver class here"
+    "# import Driver class here\n",
+    "from driver import Driver"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import Passenger class here"
+    "# import Passenger class here\n",
+    "from passenger import Passenger"
    ]
   },
   {
@@ -103,12 +114,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<passenger.Passenger object at 0x1078c5b70> <passenger.Passenger object at 0x1078c5b38>\n"
+     ]
+    }
+   ],
    "source": [
-    "meryl = None\n",
-    "daniel = None\n",
+    "meryl = Passenger()\n",
+    "daniel = Passenger()\n",
     "print(meryl, daniel)"
    ]
   },
@@ -121,11 +140,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<driver.Driver object at 0x10781e1d0>\n"
+     ]
+    }
+   ],
    "source": [
-    "flatiron_taxi = None\n",
+    "flatiron_taxi = Driver()\n",
     "print(flatiron_taxi)"
    ]
   },
@@ -138,14 +165,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<ride.Ride object at 0x10781e9b0> <ride.Ride object at 0x10781eeb8>\n"
+     ]
+    }
+   ],
    "source": [
-    "ride_to_school = None\n",
-    "ride_home = None\n",
+    "ride_to_school = Ride()\n",
+    "ride_home = Ride()\n",
     "print(ride_to_school, ride_home)"
    ]
   },
@@ -156,6 +191,27 @@
     "## Summary\n",
     "Great! In this lab, we were able to define multiple classes and create instances of those classes."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -174,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
